Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/7023703/T7023703neg.out
T7023703neg.java:14:13: compiler.err.var.might.be.assigned.in.loop: bug2
T7023703neg.java:24:13: compiler.err.var.might.be.assigned.in.loop: bug2
T7023703neg.java:34:13: compiler.err.var.might.be.assigned.in.loop: bug2
T7023703neg.java:44:13: compiler.err.var.might.be.assigned.in.loop: bug2
4 errors
